Add two views and add rotes to website

--- a/adrin/public/index.html
+++ b/adrin/public/index.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8" />
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-<title>Cyrus Studio</title>
+<title>It news</title>
 
 <!-- Google fonts -->
 <link href='http://fonts.googleapis.com/css?family=Roboto:400,300,700' rel='stylesheet' type='text/css'>
@@ -59,7 +59,7 @@
             <!-- Nav Starts -->
             <div class="navbar-collapse  collapse">
               <ul class="nav navbar-nav navbar-right scroll">
-                 <li class="active"><a href="#works">Home</a></li>
+                 <li class="active"><a href="http://localhost:3000">Home</a></li>
                  <li ><a href="#about">About</a></li>
                  <li ><a href="#partners">Partners</a></li>
               </ul>
@@ -193,6 +193,8 @@
   <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>    
   </div>
   </div>
+  <a href="http://localhost:3000" class="button style2 scrolly">Main</a>
+  <a href="http://localhost:3000/about" class="button style2 scrolly">About</a>
 </div>
 <!-- #Cirlce Ends -->
 
