--- a/adrin/public/index.html
+++ b/adrin/public/index.html
@@ -261,6 +261,9 @@ Copyright 2016. It news parser + Adrin server. All rights reserved.
 <!-- boostrap -->
 <script src="assets/bootstrap/js/bootstrap.js" type="text/javascript" ></script>
 
+<!-- jquery mobile -->
+<script src="assets/respond/respond.js"></script>
+
 <!-- gallery -->
 <script src="assets/gallery/jquery.blueimp-gallery.min.js"></script>
 
